# Bloch-Sphere

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
dependencies/: CMakeLists.txt
include/: evolve.hpp  expectation.hpp  hamiltonian.hpp  linalg.hpp  pauli.hpp  sphere.hpp
src/: CMakeLists.txt  main.cpp
